# test-new-structure

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.jx/: variables.sh
.lighthouse/jenkins-x/: release.yaml
.lighthouse/jenkins-x/javascript/: release.yaml
.lighthouse/jenkins-x/python/: release.yaml  release_batch.yaml
apps/api/: manage.py  pyproject.toml
apps/api/config/: urls.py  wsgi.py
apps/api/config/settings/: base.py
apps/batch_process/: pyproject.toml
apps/ui/: package-lock.json  package.json
apps/ui/public/: index.html  manifest.json
apps/ui/src/: App.js
charts/test-new-structure-api/: Chart.yaml  Makefile  README.md  values.yaml
charts/test-new-structure-batch-process/: Chart.yaml  Makefile  README.md  values.yaml
charts/test-new-structure-ui/: Chart.yaml  Makefile  README.md  values.yaml
